feat: 초기 주문 데이터 추가 및 테스트 코드 추가 (#32)